@@ -62,6 +62,7 @@ private:
   QUrl m_origURL;
   Data::FieldList m_origFields;
   Data::MergePair m_mergePair;
+  QList<int> m_addedEntries;
   // BibtexCollection has string macros which might get added
   QMap<QString, QString> m_addedMacros;
   // for the Replace case, the collection that got replaced needs to be cleared
